# minipokersolver

./: .gitignore  CMakeLists.txt  README.md  poker_solve  poker_solver
include/poker/: engine.hpp  tree.hpp  types.hpp
src/: api_server.cpp  main.cpp  poker_engine.cpp  solve_main.cpp  tree_builder.cpp  tree_state_logic.cpp  tree_state_logic.hpp
ui/: app.js  engine-api.js  index.html  styles.css
